Optinal null 체크 코드 추가